# codex

codex-rs/app-server/: BUILD.bazel  README.md
codex-rs/app-server/src/: config_manager_service_tests.rs
codex-rs/chatgpt/src/: chatgpt_client.rs
codex-rs/cli/src/: debug_sandbox.rs  doctor.rs  login.rs  marketplace_cmd.rs  mcp_cmd.rs  plugin_cmd.rs  sandbox_setup.rs  state_db_recovery.rs
codex-rs/cli/tests/: app_server.rs  debug_clear_memories.rs  debug_models.rs  delete.rs  exec_server.rs  execpolicy.rs  features.rs  login.rs  marketplace_add.rs  marketplace_remove.rs  marketplace_upgrade.rs  mcp_add_remove.rs  mcp_list.rs  plugin_cli.rs  sandbox_network_proxy.rs  update.rs
codex-rs/codex-mcp/src/: connection_manager.rs  connection_manager_tests.rs
codex-rs/core/: BUILD.bazel  Cargo.toml  config.schema.json
codex-rs/core/src/: bridged_responses_client.rs  client.rs  client_tests.rs  codex_thread.rs  compact_tests.rs  lib.rs  mcp_tool_call_tests.rs  realtime_conversation.rs  skills.rs  stream_events_utils.rs  test_support.rs  thread_manager.rs
codex-rs/core/tests/: responses_headers.rs
codex-rs/models-dev/: BUILD.bazel  Cargo.toml
codex-rs/models-dev/src/: cache.rs  cache_tests.rs  cost.rs  cost_tests.rs  lib.rs  lookup.rs  lookup_tests.rs  schema.rs  schema_tests.rs
codex-rs/provider-catalog/: BUILD.bazel  Cargo.toml
codex-rs/provider-catalog/src/: auth.rs  auth_tests.rs  catalog.rs  lib.rs  mapping.rs  mapping_tests.rs
codex-rs/tui/: BUILD.bazel  Cargo.toml  tooltips.txt
codex-rs/tui/src/: app.rs  app_event.rs  app_server_session.rs  cli.rs  (+12 more)
(+182 files in other folders)
