[package]
edition.workspace = true
license.workspace = true
name = "codex-provider-catalog"
version.workspace = true

[lib]
doctest = false
name = "codex_provider_catalog"
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
codex-models-dev = { workspace = true }
codex-model-provider-info = { workspace = true }
codex-protocol = { workspace = true }
codex-utils-absolute-path = { workspace = true }
codex-utils-output-truncation = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
tempfile = { workspace = true }
